ontol/ontol-compiler/test-cases/error/repr/abstract_tuple.on
def foo (rel .is: number) // NOTE type is abstract
def bar (rel .0: foo) // ERROR type not representable// NOTE type of field is abstract
